@@ -75,5 +75,21 @@ describe RedCloth do
     html = "<p>This is a paragraph</p>\n<p>This is a<br />\nline break.</p>\n<div>\n<p>test</p>\n</div>"
     RedCloth.new(input).to_html.should == html
   end
-
+  
+  if RUBY_VERSION > "1.9.0"
+    it "should preserve character encoding" do
+      input = "This is an ISO-8859-1 string"
+      input.force_encoding 'iso-8859-1'
+      output = RedCloth.new(input).to_html
+      
+      output.should == "<p>This is an <span class=\"caps\">ISO</span>-8859-1 string</p>"
+      output.encoding.to_s.should == "ISO-8859-1"
+    end
+    
+    it "should not raise ArgumentError: invalid byte sequence" do
+      s = "\xa3"
+      s.force_encoding 'iso-8859-1'
+      lambda { RedCloth.new(s).to_html }.should_not raise_error
+    end
+  end
 end
